# ChangeLog for dev-libs/libots
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libots/Attic/ChangeLog,v 1.15 2007/12/25 15:57:33 phreak Exp $

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing taviso from metadata.xml as per #202471. Assigning to
  maintainer-needed.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> libots-2.2.7-r2.ebuild:
  (QA) RESTRICT clean up.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libots-2.2.7-r1.ebuild, libots-2.2.7-r2.ebuild, libots-2.2.7.ebuild:
  virtual/glibc -> virtual/libc

  24 May 2004; Bryan Østergaard <kloeri@gentoo.org> libots-2.2.7-r2.ebuild:
  Stable on alpha.

*libots-2.2.7-r2 (19 Feb 2004)

  19 Feb 2004; Tavis Ormandy <taviso@gentoo.org> :
  use the new rpm.eclass, change the syntax do use into, dolib, etc.

*libots-2.2.7-r1 (06 Feb 2004)

  06 Feb 2004; Aron Griffis <agriffis@gentoo.org> libots-2.2.7-r1.ebuild:
  move libots to /lib

  20 May 2003; Tavis Ormandy <taviso@gentoo.org> libots-2.2.7.ebuild:
  Debian project say its okay to mirror libots.

*libots-2.2.7 (15 Dec 2002)

  15 Apr 2003; Tavis Ormandy <taviso@gentoo.org> libots-2.2.7.ebuild:
  Fixed incorrect homepage

  15 Dec 2002; Bjoern Brauel <bjb@gentoo.org>
  Initial ebuild 
