@@ -1,6 +1,4 @@
 DIST libots-2.2.7-2.alpha.rpm 94336 RMD160 ac17689a543dcb5097c35229267f04fe5856bf42 SHA1 f266cfa5b837e14d3cac20659e55dedaa52e5dc5 SHA256 32e6e49d8bc4faf1b5c250cb764c124833947fa16c7f96ea6b23fb4d96030530
-EBUILD libots-2.2.7-r1.ebuild 795 RMD160 62c9a0b0e22a7faffe616d1d273d8074c8a77d8f SHA1 fa81a132b35a618856474b0830fefb5361ff4a37 SHA256 129f0d538168d7b2da734410561d45dc7ed6a80e44bf684f4a35f7be83d86508
-EBUILD libots-2.2.7-r2.ebuild 721 RMD160 4dcff394a737f2955a7134157a933de6e29fd636 SHA1 1aa228fd3ab653de4bb504b4ed8cebc82415c385 SHA256 4e72eca1b4d4091a92454901a99c5ab2c31e8ac1e0354ba0e5c295e9a5a8c143
-EBUILD libots-2.2.7.ebuild 871 RMD160 0795e16690ab5e028929b26ac6d7973889632e05 SHA1 6f1b945ad12bae9bcf90a377e15572cbf42830f5 SHA256 72625ab46d00bc01eb8e4529027532ebcd58ddf013f61b4ee0803a9c791292b1
-MISC ChangeLog 1521 RMD160 72e6c0defe945731f9ff1df55dd8e379252b1553 SHA1 efbf37b6913b6ea1fbd477d698c62040de39fd81 SHA256 a54f147206746af30bdc9ac826c8e8cdfd8abdbdc58fe84cf9c145f6360f0350
+EBUILD libots-2.2.7-r2.ebuild 714 RMD160 643560d6de26e4900bde6021c355be9b72438b05 SHA1 f9ca30fdbffc817b3ef2fdb41e07100e7a48a9e4 SHA256 87ede4342f0924e40ef7bbeb8c6e86bfc152a6c10b10477a4817c005ba0f2330
+MISC ChangeLog 1702 RMD160 f48a4ba32fef6636795df816810700c76ad9969c SHA1 05d051834611ab3b240fcc4334ecf92066d51bb2 SHA256 eac6a1676099890aa7c23549b5a4d4311e1f828c24b04f05b3d1c8fff8a58f41
 MISC metadata.xml 383 RMD160 bd7ac45c3d1f37d81679c265d2333a8b705f8a16 SHA1 da98a7db62897af544093e1fca03eb19846fd6f5 SHA256 8029554305ccd5d12a6c0018db3274c0c331e7b0d03a6b62fc61d4d49a8ea779
